# ChangeLog for net-analyzer/symon
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/symon/ChangeLog,v 1.10 2012/02/15 15:49:30 jer Exp $

*symon-2.84 (15 Feb 2012)

  15 Feb 2012; Jeroen Roovers <jer@gentoo.org> -symon-2.80.ebuild,
  +symon-2.84.ebuild:
  Version bump.

*symon-2.83 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> +symon-2.83.ebuild:
  Version bump.

*symon-2.80 (01 Dec 2009)

  01 Dec 2009; Tiago Cunha <tcunha@gentoo.org> -symon-2.79-r5.ebuild,
  +symon-2.80.ebuild, +files/symon.conf, -files/symon-symon.conf.patch,
  -files/symon-symux.conf.patch, +files/symux.conf, metadata.xml:
  - Version bump.
  - Remove old.

  08 Dec 2008; Tiago Cunha <tcunha@gentoo.org> metadata.xml,
  symon-2.79-r5.ebuild:
  - Call pmake directly. Thanks to vapier in bug 250143.
  - While there improve USE flags descriptions.

  17 Nov 2008; Tiago Cunha <tcunha@gentoo.org> -symon-2.79-r3.ebuild,
  -symon-2.79-r4.ebuild:
  Remove old versions

*symon-2.79-r5 (17 Nov 2008)

  17 Nov 2008; Tiago Cunha <tcunha@gentoo.org> files/symon-init.d,
  files/symux-init.d, +symon-2.79-r5.ebuild:
  Improve the init scripts by:
  - depending on localmount (both daemons need to write to local disks).
  - starting after bootmisc (both daemons place a pidfile in /var/run).
  - using the system logger.
  - introducing the reload option which sends a SIGHUP to the daemons.
  - removing the quiet flag to avoid hiding useful information.

  09 Nov 2008; Tiago Cunha <tcunha@gentoo.org> metadata.xml:
  Update my email address. Thanks pva

*symon-2.79-r4 (27 Aug 2008)

  27 Aug 2008; Peter Volkov <pva@gentoo.org> +symon-2.79-r4.ebuild:
  Added symon USE flag to make it possible build only client: either perl
  client or symux, thank Tiago Cunha for the work.

*symon-2.79-r3 (19 Aug 2008)

  19 Aug 2008; Peter Volkov <pva@gentoo.org> -symon-2.79-r2.ebuild,
  +symon-2.79-r3.ebuild: