@@ -5,16 +5,16 @@ AUX symon-init.d 680 RMD160 b944a18cefedc75a17f4cba0a7d9f824cf2ab8ab SHA1 dfb140
 AUX symon.conf 313 RMD160 2a892b80bbf6d1f78c06875782a080d28661fd84 SHA1 15d93dd00106a8bd9444a79ffab9a1fd0c22af76 SHA256 3f4914f65fa4456de5ee70da3c6f40f416d6452fac8a439648cc565c791cec73
 AUX symux-init.d 674 RMD160 1de1e203dd711df1cfdc95beef65c02ade32976b SHA1 2c0da16555cb9a965f89ed3dd904638e560389ee SHA256 a985bfb53ea2bfcc47a57d5b10ec8411853795a11a6892caaa974ddfecce75dd
 AUX symux.conf 952 RMD160 7e88432728d7b9884695b9a55a5d1b11246b0b9f SHA1 81c077f320f1aa98b20336eee2cf1f25cf59e206 SHA256 20f915f55f084c1f9b55410c097c8165e2d621924e3496c9e3add7c1de655126
-DIST symon-2.83.tar.gz 105322 RMD160 bcb8d39b650ee0160a8646d97f91117281af7329 SHA1 bee7a25b99dc218388c8154a24336cc622622c7b SHA256 63d4cbc218ddfe74fe57873e149dae4ccddb4e7bc67edfcbb5223d1b4674ca84
 DIST symon-2.84.tar.gz 105849 RMD160 0211185b3e19593e3a6807fe58ecfdd72520a6bc SHA1 1a4a79c01b43ae3efc7e9179266d3f7375eb94f3 SHA256 4b67beae478f4314c81428d44578670914fbc8e761e9c7ae0d9701c267f7a371
-EBUILD symon-2.83.ebuild 3041 RMD160 b38e4d9035533ac22bc99af9602f03908337795c SHA1 26a992e5daef4495267d4645f6b390f41bf76780 SHA256 4ddca8335574d62a9e06e87cb11d377243a28a9fd1fff2c3d943a5b66c4688ba
+DIST symon-2.85.tar.gz 106011 RMD160 c355c188d23284de175756e044c43e8c9f6cc6e2 SHA1 96e4d0e6dbd763249fcc09c5e25e1ae233781fea SHA256 547329a1efbc2408298256d31a005db23869117ccf6249c052ef662b3ee12d35
 EBUILD symon-2.84.ebuild 2626 RMD160 5cf4252fc6f229e2e503ff1f3a82ed48d5c5935a SHA1 d13ce30e476b934c9eb5bc66d94c4ccc4d8c053c SHA256 af23e263d0e5d6cd068a6093020c04eb653641ea1c5b727e804018f8ae435c17
-MISC ChangeLog 2358 RMD160 b2be6aa7d2aee989c7df89060a08fa82b298b15b SHA1 8a1acc9bde9af6431937d511a9809a7ebb9f98ae SHA256 26915846896eec37471b2e00ed141f7befc7223df0e07110a0d7780bb90952d2
+EBUILD symon-2.85.ebuild 2626 RMD160 05ba5c6ed725bcc8e176ea37238416843c4fee1f SHA1 ca2300bde8316ecd298eda36ebe2a3be4fe742ee SHA256 d65d4da50c153096318d32d5a7c4bf20c150c78057b1e3a9d406130565eb02a8
+MISC ChangeLog 2491 RMD160 3ad3b6c8aca0173560fd3f3fe3395169023f1409 SHA1 a1aac27b5a89d422791650b2526ac5ad8c2c8ad4 SHA256 e99e04dd27432fd4c01a2446e70c588b278c7523d1ec7aa3d1d9ff0252424af8
 MISC metadata.xml 512 RMD160 6b444d2d140460d6ba170a4492710c092854b9f5 SHA1 ea9074b4229bc8ea0c90d59d1885c6536803fd6e SHA256 c95f7e3719ea159f70b49b972150f6fb2f366f2373636a0a6167a6efe36b4631
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk871A8ACgkQVWmRsqeSphOHrQCeMw7Vdyx/MWoC+7PBMIzaPiJ5
-O7kAn0CDhk2iGCu762N1L1M7bzJXRM6P
-=R+Cr
+iEYEARECAAYFAk+NnNsACgkQVWmRsqeSphPxFACeKL5ABkIJuOSQ6+kIfD1uVrJO
+eFQAnjRDhCd0bwO9CSjn59kZIT9xLsxO
+=4lZ1
 -----END PGP SIGNATURE-----
