@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/symon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/symon/ChangeLog,v 1.10 2012/02/15 15:49:30 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/symon/ChangeLog,v 1.11 2012/04/17 16:39:50 jer Exp $
+
+*symon-2.85 (17 Apr 2012)
+
+  17 Apr 2012; Jeroen Roovers <jer@gentoo.org> -symon-2.83.ebuild,
+  +symon-2.85.ebuild:
+  Version bump.
 
 *symon-2.84 (15 Feb 2012)
 
